Improves base.html

--- a/tailwind/app_template/templates/base.html
+++ b/tailwind/app_template/templates/base.html
@@ -14,10 +14,13 @@
   <link rel="stylesheet" href="{% static "css/styles.min.css" %}">
 </head>
 
-<body class="bg-grey-lightest font-sans leading-normal tracking-normal">
+<body class="bg-grey-lightest font-serif leading-normal tracking-normal">
 
 <div class="container mx-auto">
-  <h1>Django + Tailwind = ❤️</h1>
+  <section class="flex items-center justify-center h-screen">
+    <h1 class="text-5xl">Django + Tailwind = ❤️</h1>
+  </section>
+
 </div>
 
 
