--- a/tailwind/app_template/templates/base.html
+++ b/tailwind/app_template/templates/base.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="">
   <meta name="author" content="">
 
-  <link rel="stylesheet" href="{% static "css/styles.min.css" %}">
+  <link rel="stylesheet" href="{% static 'css/styles.min.css' %}">
 </head>
 
 <body class="bg-grey-lightest font-serif leading-normal tracking-normal">
