--- a/tailwind/templates/tailwind/tags/css.html
+++ b/tailwind/templates/tailwind/tags/css.html
@@ -4,6 +4,6 @@
 
 {% if debug %}
   <script id="__bs_script__">//<![CDATA[
-  document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
+  document.write("<script async src='//HOST:8383/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
   //]]></script>
 {% endif %}
