Adds theme nammespace for styles

--- a/example/theme/templates/base.html
+++ b/example/theme/templates/base.html
@@ -6,13 +6,12 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Tailwind CSS Skeleton</title>
+		<title>Django Tailwind</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<meta name="author" content="">
 
-		{% tailwind_preload_css v="1" %}
-		{% tailwind_css v="1" %}
+		{% tailwind_css %}
 	</head>
 
 	<body class="bg-grey-lightest font-serif leading-normal tracking-normal">
@@ -21,7 +20,10 @@
 			<section class="flex items-center justify-center h-screen">
 				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
 			</section>
+
 		</div>
 
+
 	</body>
+
 </html>
