--- a/src/tailwind/app_template_v2/{{cookiecutter.app_name}}/templates/base.html
+++ b/src/tailwind/app_template_v2/{{cookiecutter.app_name}}/templates/base.html
@@ -1,4 +1,3 @@
-{% raw %}
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
@@ -7,7 +6,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Tailwind CSS Skeleton</title>
+		<title>Django Tailwind</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<meta name="author" content="">
@@ -28,4 +27,3 @@
 	</body>
 
 </html>
-{% endraw %}
