--- a/src/tailwind/templates/tailwind/tags/preload_css.html
+++ b/src/tailwind/templates/tailwind/tags/preload_css.html
@@ -1,3 +1,3 @@
 {% load static %}
 
-<link rel="preload" href="{% static 'css/dist/styles.css' %}{% if v %}?v={{ v }}{% endif %}" as="style">
+<link rel="preload" href="{% if is_static_path %}{% static tailwind_css_path %}{% else %}{{ tailwind_css_path }}{% endif %}{% if v %}?v={{ v }}{% endif %}" as="style">
