Fixes bg color class

--- a/example/theme/templates/base.html
+++ b/example/theme/templates/base.html
@@ -9,7 +9,7 @@
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-grey-lightest font-serif leading-normal tracking-normal">
+	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
 		<div class="container mx-auto">
 			<section class="flex items-center justify-center h-screen">
 				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
