Adds plugin_install; Adds daisyUI support

--- a/src/tailwind/app_template_v4/{{cookiecutter.app_name}}/static_src/src/styles.css
+++ b/src/tailwind/app_template_v4/{{cookiecutter.app_name}}/static_src/src/styles.css
@@ -1,4 +1,5 @@
-@import "tailwindcss";
+@import "tailwindcss";{% if cookiecutter.include_daisy_ui == 'yes' %}
+@plugin "daisyui";{% endif %}
 
 /**
   * A catch-all path to Django template files, JavaScript, and Python files
